lab1/Test/L1-A-10-40.cmm
struct OXc3fO5lv1ZAC1HYTLL @Cy1gYu8HqQD5N , nSmsMbiU8Q 
  [ 510066711 ] 

;
float ;
struct {
}vDFn4EiVNS763FKxMP ( ) {
  int * CUiUaT ;
}
int ;
struct {
  int vJ ;
  struct d0duQyPuOOjXM {
  }OBC6SNw45Rl8s , rcOY , kS1 = KRVrj0i85DptVqQD1gX 
    = e8uMYFqt4 && AwsLYKJjKisSsDs1QiB >= EoMqSYlFYokv 
    / ! - qumR0xO [ sw9kbbckE8ozc7ASz || MX <= spMc8 + 
    w_gkxP3QrOU ( oXhwGfhPlqEd , EHjpztIK0LjHM = ltCPEIPEq69qqp 
    > swgYBpeB8FFgX20JHoY ( LqlxYIMv43b = ZnZ8R8h || bFxh 
    < ioBkovQkBwCt7tvCkWVA - ! iqYFQJA ( MCcoqrofsgQ3Xd 
    || m == lcG0oB254nowxaI3 / - ( _inwd8 = fIuZySIXNFqkOf 
    != yy_w8DD + ! ! ! ! - ! 976537367.828306022 ) && 
    ! oCp9xykq21Bf2nq7uvd ) @) ) - 178250021 * IwoKJQ_JlRtPdcG 
    ( ) . mecBpR0ad ] ;
};
int BcXCJSQc21a ( int Xcu5Qx ) {
  ah60pBV3eYlm65mR2 ;
{
    if ( f_bORNadvC )     if ( LVvJrSdy3yj4 )     while 
      ( tIn )     if ( t2 )     XUXhrfbmXMNcpnJQ ;
else     return LpBIEZm93Iy ;


else     if ( zQazhUP83qa4EKQa1R )     u ;



  }}
int VfU7yXPfQi3ftFIxDtk ( int sZCmMCeaWZ6kXSumE0 , 
  int dBS2Hd9Tt40P9 ) {
}
